# rvisor

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN-IPC.md  DESIGN.md  README.md
.github/workflows/: release.yml
src/: actor.rs  ipc.rs  lib.rs  main.rs  persist.rs  process.rs  supervisor.rs
tests/: actor.rs  milestones.rs
