[package]
name = "rvisor"
version = "0.2.0"
edition = "2021"
description = "Rust-based process supervisor with a local IPC control plane"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/0x9bb1/rvisor"
homepage = "https://github.com/0x9bb1/rvisor"
keywords = ["supervisor", "daemon", "process", "ipc"]
categories = ["command-line-utilities", "os::unix-apis"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "process", "fs", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal", "process", "resource", "fs", "user"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
